# msmv

./: AbstractTransformation.hpp  BrightnessAndContrast.cpp  BrightnessAndContrast.h  CMakeLists.txt  Compression.cpp  Compression.h  FishEye.cpp  FishEye.h  GaussianBlur.cpp  GaussianBlur.h  GaussianNoise.cpp  GaussianNoise.h  ImageDB.cpp  ImageDB.h  ImageHandler.h  LensDistort.cpp  LensDistort.h  Options.cpp  Options.h  Options.hpp  README.md  RandomItem.cpp  RandomItem.h  Resize.cpp  Resize.h  SaltPepperNoise.cpp  SaltPepperNoise.h  TransformationsHolder.cpp  TransformationsHolder.h  main.cpp
